--- a/style.css
+++ b/style.css
@@ -11,3 +11,9 @@ ul {
 p, a {
   margin: .33em auto;
 }
+a, p, li {
+	font-family: Arial;
+}
+h1, h2, h3, h4, h1 a, h2 a, h3 a, h4 a {
+	font-family: Times New Roman;
+}
